--- a/src/components/productCard/productCard.css
+++ b/src/components/productCard/productCard.css
@@ -7,6 +7,15 @@
     width: 100%;
     height: 400px;
 }
+.card-body {
+    flex: 1 1 auto;
+    padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);
+    color: var(--bs-card-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-end;
+}
 .card-title{
     font-size: 18px;
 }
