--- a/src/components/productCard/productCard.css
+++ b/src/components/productCard/productCard.css
@@ -4,33 +4,43 @@
 }
 
 .product-card {
-    width: 100%;
-    height: 400px;
+  width: 100%;
+  height: 400px;
+  -webkit-box-shadow: 5px 3px 5px -3px rgba(68, 68, 68, 0.77);
+  -moz-box-shadow: 5px 3px 5px -3px rgba(68, 68, 68, 0.77);
+  box-shadow: 5px 3px 5px -3px rgba(68, 68, 68, 0.77);
+  border:none!important;
 }
 .card-body {
-    flex: 1 1 auto;
-    padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);
-    color: var(--bs-card-color);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-end;
+  flex: 1 1 auto;
+  padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);
+  color: var(--bs-card-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-end;
 }
-.card-title{
-    font-size: 18px;
+.card-title {
+  font-size: 18px;
 }
-.card-text{
-    font-size:14px;
+.card-text {
+  font-size: 14px;
 }
 
 .action-row {
-    display: flex;
-    justify-content: space-between; 
-    align-items: flex-end;
-    margin-top: auto; 
-    width: 45%;
-  }
-  
-  .action-row button {
-    margin-bottom: 0;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-top: auto;
+}
+
+.action-row button {
+  margin-bottom: 0;
+  display: flex;
+  align-items: center;
+  height: ;
+}
+
+.btn-review {
+  margin-right: 0.5rem;
+}
