--- a/src/components/productCard/productCard.css
+++ b/src/components/productCard/productCard.css
@@ -1,34 +1,53 @@
 .card-img-top {
-  object-fit: cover;
-  height: 200px;
-}
-
-.product-card {
-    width: 100%;
-    height: 400px;
-}
-.card-body {
-    flex: 1 1 auto;
-    padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);
-    color: var(--bs-card-color);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-end;
-}
-.card-title{
-    font-size: 18px;
-}
-.card-text{
-    font-size:14px;
-}
-
-.action-row{
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
-    margin-bottom: 0;
-}
-.action-row button{
-    margin-bottom:0;
-}
+    object-fit: cover;
+    height: 200px;
+    border-radius: 10px 10px 0 0;
+  }
+  
+  .product-card {
+      width: 100%;
+      height: 400px;
+      box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+      transition: all 0.3s ease-in-out;
+      border-radius: 10px;
+  }
+  
+  .product-card:hover {
+      transform: scale(1.05);
+  }
+  
+  .card-body {
+      flex: 1 1 auto;
+      padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);
+      color: var(--bs-card-color);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: flex-end;
+  }
+  
+  .card-title{
+      font-size: 18px;
+  }
+  
+  .card-text{
+      font-size:14px;
+  }
+  
+  .action-row {
+      display: flex;
+      justify-content: space-between; 
+      align-items: flex-end;
+      margin-top: auto; 
+      width: 45%;
+  }
+  
+  .action-row button {
+      margin-bottom: 0;
+      padding: 10px;
+      transition: all 0.3s ease-in-out; 
+  }
+  
+  .action-row button:hover {
+      transform: scale(1.1);
+  }
