created Add Product Page

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,26 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
+
+:root {
+  --font-family: 'Manrope', sans-serif;
+
+  --gradient-text: linear-gradient(89.97deg, #AE67FA 1.84%, #F49867 102.67%);
+  --gradient-bar: linear-gradient(103.22deg, #AE67FA -13.86%, #F49867 99.55%);
+  
+  --color-bg: #F9FAFF;
+  --color-footer : #031B34;
+  --color-blog: #FFFFFF;
+  --color-text: #333538;
+  --color-subtext: #797979;
+  --color-border: #7E8084;
+  --color-border-2: #D0D0D1;
+  --color-btn-border: #1C40CE;
+  --color-btn-bg: #ECF0FF;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: var(--font-family);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #EEEEEE!important;
