--- a/src/components/productCard/productCard.css
+++ b/src/components/productCard/productCard.css
@@ -60,7 +60,7 @@
 .btn-review {
   margin-right: 0.5rem;
 }
-a{
-  text-decoration: none!important;
-  color: #FFFFFF;
+a {
+  text-decoration: none !important;
+  color: #ffffff;
 }
