the elements providing the input operations were organised

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -9,3 +9,10 @@
     justify-content: center;
     align-items: center;
 }
+.auth{
+    display: flex !important;
+    align-items: center;
+    gap: 5;
+    margin-left: 1em;
+    
+}
